# secluso

./: .dockerignore  .gitignore  COPYRIGHT_NOTICE  HOW_TO.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES
android_app_native/: Cargo.toml
android_app_native/examples/: app.rs
android_app_native/src/: core.rs  lib.rs  logger.rs
app_native/: Cargo.toml
app_native/examples/: app.rs
app_native/src/: lib.rs
camera_hub/: Cargo.toml  example_cameras.yaml
camera_hub/src/: config.rs  delivery_monitor.rs  detect_motion.rs  fmp4.rs  ip_camera.rs  ip_motion_detection.rs  livestream.rs  main.rs  motion.rs  motion_detection.rs  mp4.rs  pairing.rs  raspberry_pi_camera.rs  rpi_camera.rs  rpi_dual_stream.rs  rpi_motion_detection.rs  traits.rs
camera_hub/src/ip/: ip_camera.rs  ip_motion_detection.rs  mod.rs
camera_hub/src/raspberry_pi/: clahe.rs  mod.rs  rpi_camera.rs  rpi_dual_stream.rs  rpi_motion_detection.rs
camera_hub/src/raspberry_pi/motion/: background.rs  detector.rs  mod.rs  preprocessing.rs
client_lib/: Cargo.toml
client_lib/src/: backend.rs  config.rs  http_client.rs  identity.rs  lib.rs  mls_client.rs  mls_clients.rs  openmls_rust_persistent_crypto.rs  pairing.rs  pcs.rs  stream.rs  tests.rs  thumbnail_meta_info.rs  user.rs  video_net_info.rs
client_server_lib/: Cargo.toml
client_server_lib/src/: auth.rs  fault.rs  lib.rs  ops.rs
config_tool/: Cargo.toml
config_tool/src/: main.rs
motion_ai/: .gitignore
motion_ai/cli/: Cargo.toml
motion_ai/cli/src/: main.rs
motion_ai/cli/static/: index.html  styles.css  ui.js
motion_ai/pipeline/: Cargo.toml  models.toml
motion_ai/pipeline/src/: backend.rs  config.rs  frame.rs  lib.rs
motion_ai/pipeline/src/logic/: activity_states.rs  context.rs  fsm.rs  health_states.rs  intent.rs  mod.rs  pipeline.rs  replay.rs  stages.rs  telemetry.rs  timer.rs
motion_ai/pipeline/src/ml/: mod.rs  models.rs  nanodet.rs
motion_ai/pipeline/src/motion/: background.rs  clahe.rs  detector.rs  mod.rs  preprocessing.rs
releases/: Dockerfile  README.md  build.sh  digests.lock.env
reset/: Cargo.toml
reset/src/: main.rs
server/: Cargo.toml
server/src/: auth.rs  ds.rs  ds_interface.rs  fcm.rs  main.rs  security.rs  tcpserver_mio.rs
tester/: Cargo.toml
tester/src/: fault_injection.rs  main.rs
update/: Cargo.toml
update/src/: main.rs
