[package]
name = "privastead-camera-hub"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]

[dependencies]
docopt = "~1.1"
env_logger = "0.9.0" # 0.10 requires an MSRV bump to 1.60
log = { version = "0.4.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
rand="0.8"
bincode = "1.2.1"
privastead-client-lib = { path = "../client_lib" }
chrono = "0.4"
base64 = "0.13"
serde-xml-rs = "0.5"
sha1 = "0.10"
qrcode = "0.14.0"
image = "0.25.1"
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
retina = "0.4.10"
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2.2.1"
anyhow = "1.0.41"
bytes = "1.0.1"
futures = "0.3.14"
serde_yml = "0.0.12"
ndarray = { version="0.15.6", features = ["rayon"]} # This has to be 0.15 to support linfa
crossbeam-channel = "0.5.14"

[target.'cfg(target_arch = "x86_64")'.dependencies]
rpassword = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
http-auth = "0.1"
linfa = "0.7.1"
linfa-clustering = "0.7.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
serde_json = "1.0"
fast_image_resize = { version = "5.1.2", features = ["rayon"] }
imageproc="0.25.0"
rayon = "1.10.0"