[package]
name = "privastead-camera-hub"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
ip = ["dep:rpassword", "dep:reqwest", "dep:http-auth", "dep:linfa", "dep:linfa-clustering"]
raspberry = ["dep:serde_json", "dep:fast_image_resize", "dep:imageproc", "dep:rayon"]

[dependencies]
docopt = "~1.1"
env_logger = "0.9.0" # 0.10 requires an MSRV bump to 1.60
log = { version = "0.4.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
rand="0.8"
bincode = "1.2.1"
privastead-client-lib = { path = "../client_lib" }
chrono = "0.4"
base64 = "0.13"
serde-xml-rs = "0.5"
sha1 = "0.10"
qrcode = "0.14.0"
image = "0.25.1"
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
retina = "0.4.10"
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2.2.1"
anyhow = "1.0.41"
bytes = "1.0.1"
futures = "0.3.14"
serde_yml = "0.0.12"
ndarray = { version="0.15.6", features = ["rayon"]} # This has to be 0.15 to support linfa
crossbeam-channel = "0.5.14"
cfg-if = "1.0.0"

# IP Specific Dependencies
rpassword = {version = "5.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
http-auth = { version = "0.1", optional = true }
linfa = { version = "0.7.1", optional = true }
linfa-clustering = { version = "0.7.1", optional = true }

# Raspberry Specific Dependencies
serde_json = { version = "1.0", optional = true }
fast_image_resize = { version = "5.1.2", features = ["rayon"], optional = true }
imageproc= { version = "0.25.0", optional = true }
rayon = { version = "1.10.0", optional = true }