[package]
name = "privastead-client-lib"
version = "0.1.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[features]
default = ["logging"]
logging = ["log"]
http_client = ["dep:reqwest", "dep:base64"]

[dependencies]
docopt = "~1.1"
env_logger = "0.9.0" # 0.10 requires an MSRV bump to 1.60
log = { version = "0.4.4", optional = true }
mio = { version = "0.8", features = ["net", "os-poll"] }
serde = "1.0"
serde_derive = "1.0"
openmls = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1", features = ["test-utils"] }
ds-lib = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
openmls_traits = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
openmls_libcrux_crypto = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
openmls_memory_storage = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1", features = ["persistence"] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.6.0-pre.1" }
hmac = "0.12.1"
sha3 = "0.10.8"
bincode = "1.2.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "multipart"], optional = true }
base64 = { version = "0.22.1", optional = true }
anyhow = "^1.0.64" # Locked to this version due to flutter_rust_bridge usage in app
