[package]
name = "secluso-motion-ai-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
raspberry = ["ffmpeg-next/rpi"]

[dependencies]
ffmpeg-next = { version = "7.1.0", default-features = false, optional = false }

video-rs= { version = "0.10.3", features = ["ndarray"] }
secluso-motion-ai = { path = "../pipeline", features=["mp4_player"] }
anyhow = "1.0.41"
